--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,1 @@
-<form>
-
-  <div class="form-group">
-    <h3>Login do Sistema</h3>
-  </div>
-
-  <div class="form-group">
-    <label for="user">E-mail</label>
-    <input type="email" class="form-control" id="user" aria-describedby="emailHelp" placeholder="Informe o e-mail" 
-      required>
-  </div>
-  <div class="form-group">
-    <label for="senha">Senha</label>
-    <input type="password" class="form-control" id="senha" placeholder="Informe a senha" 
-      required>
-  </div>
-  <button type="button" class="btn btn-primary">Acessar</button>
-</form>
+<app-form-login></app-form-login>
