Validando formulário de login

--- a/src/app/form-login/form-login.component.css
+++ b/src/app/form-login/form-login.component.css
@@ -3,3 +3,11 @@
 }
 
 html, body { max-width: 100%; overflow-x: hidden; }
+
+.ng-valid[required], .ng-valid.required {
+    border-left: 5px solid #42A948;
+}
+
+.ng-invalid:not(form) {
+    border-left: 5px solid #a94442;
+}
