--- a/src/app/form-login/form-login.component.html
+++ b/src/app/form-login/form-login.component.html
@@ -6,12 +6,18 @@
     <div class="form-group">
         <label for="user">E-mail</label>
         <input type="email" class="form-control" id="user" aria-describedby="emailHelp" 
-        placeholder="Informe o e-mail" required [(ngModel)]="formLogin.login">
+            required [(ngModel)]="formLogin.login" #email="ngModel">
+        <div *ngIf="email.invalid" class="alert alert-danger">
+            Login deve ser informado!
+        </div>
     </div>
     <div class="form-group">
         <label for="senha">Senha</label>
-        <input type="password" class="form-control" id="senha" placeholder="Informe a senha" 
-        required [(ngModel)]="formLogin.senha">
+        <input type="password" class="form-control" id="senha"
+            required [(ngModel)]="formLogin.senha" #senha="ngModel">
+        <div *ngIf="senha.invalid" class="alert alert-danger">
+            Senha deve ser informado!
+        </div>
     </div>
-    <button type="button" class="btn btn-primary" (click)="realizaLogin()">Acessar</button>
+    <button type="button" class="btn btn-primary" (click)="realizaLogin()" [disabled]="email.invalid || senha.invalid">Acessar</button>
 </div>
