--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -1,5 +1,5 @@
 <table class="table table-striped">
-    <thead>
+    <thead class="thead-dark">
         <tr>
         <th scope="col">Nome</th>
         <th scope="col">CPF</th>
