--- a/src/app/usuario/usuario-add/usuario-add.component.html
+++ b/src/app/usuario/usuario-add/usuario-add.component.html
@@ -1,37 +1,46 @@
+<h3 id="tituloForm">Cadastro de usuários</h3>
 <div>
     <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="inputEmail4">Email</label>
-        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+      <div class="form-group col-md-1" *ngIf="op == 'editar'">
+        <label>Id</label>
+        <input type="input" readonly class="form-control" id="inputId" value="">
       </div>
-      <div class="form-group col-md-6">
-        <label for="inputPassword4">Senha</label>
-        <input type="password" class="form-control" id="inputPassword4" placeholder="Senha">
+      <div class="form-group col-md-3">
+        <label for="inputNome">Nome</label>
+        <input type="text" class="form-control" id="inputNome" placeholder="Digite o nome" 
+            autocomplete="false" value="" required>
       </div>
-    </div>
-    <div class="form-group">
-      <label for="inputAddress">Endereço</label>
-      <input type="text" class="form-control" id="inputAddress" placeholder="Rua dos Bobos, nº 0">
-    </div>
-    <div class="form-group">
-      <label for="inputAddress2">Endereço 2</label>
-      <input type="text" class="form-control" id="inputAddress2" placeholder="Apartamento, hotel, casa, etc.">
+      <div class="form-group col-md-3">
+        <label for="inputCPF">CPF</label>
+        <input type="text" class="form-control" id="inputCPF" placeholder="Digite o CPF" 
+            autocomplete="false" value="" required>
+      </div>
     </div>
     <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="inputCity">Cidade</label>
-        <input type="text" class="form-control" id="inputCity">
-      </div>
-      <div class="form-group col-md-4">
-        <label for="inputEstado">Estado</label>
-        <select id="inputEstado" class="form-control">
-          <option selected>Escolher...</option>
-          <option>...</option>
-        </select>
-      </div>
-      <div class="form-group col-md-2">
-        <label for="inputCEP">CEP</label>
-        <input type="text" class="form-control" id="inputCEP">
-      </div>
+        <div class="form-group col-md-4">
+            <label for="inputLogin">Login</label>
+            <input type="text" class="form-control" id="inputLogin" placeholder="Digite o login" 
+                autocomplete="false" value="" required>
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-2">
+            <label for="inputSenha">Senha</label>
+            <input type="password" class="form-control" id="inputSenha" placeholder="Digite a senha" 
+                autocomplete="false" value="" required maxlength="6">
+        </div>
+        <div class="form-group col-md-2">
+            <label for="inputConfirmSenha">Confirmar a Senha</label>
+            <input type="password" class="form-control" id="inputConfirmSenha" placeholder="Digite a senha novamente" 
+                autocomplete="false" value="" required maxlength="6">
+        </div>
+    </div>
+
+    <div class="form-row">
+        <div class="form-group col-md-7" id="divBotoes">
+            <button type="button" class="btn btn-warning" routerLink="/usuarios">Voltar</button>
+            <button type="button" class="btn btn-primary" id="btnGravar" *ngIf="op == 'salvar'">Gravar</button>
+            <button type="button" class="btn btn-primary" id="btnGravar" *ngIf="op == 'editar'">Alterar</button>
+        </div>
     </div>
   </div>
