Implementacao da exibicao de telefones em addUsuario

--- a/src/app/usuario/usuarios/usuario.component.html
+++ b/src/app/usuario/usuarios/usuario.component.html
@@ -27,8 +27,7 @@
             <td>
                 <button class="btn btn-primary " data-toggle="modal" data-target="#modalExcluir" 
                     (click)="idUsuario = usuario.id">Excluir</button>
-                <button routerLink="../usuario/add/{{usuario.id}}"  
-                    class="btn btn-warning" id="btnEditar">
+                <button routerLink="../usuario/add/{{usuario.id}}" class="btn btn-warning" id="btnEditar">
                     Editar
                 </button>
             </td>
