--- a/src/app/usuario/usuario-add/usuario-add.component.css
+++ b/src/app/usuario/usuario-add/usuario-add.component.css
@@ -6,7 +6,7 @@
     text-align: right;
 }
 
-#btnGravar, #btnAlterar {
+#btnGravar, #btnAlterar, #btnEditarTel, #btnExcluirTel {
     margin-left: 5px;
 }
 
