--- a/src/app/usuario/usuario-add/usuario-add.component.html
+++ b/src/app/usuario/usuario-add/usuario-add.component.html
@@ -27,6 +27,34 @@
                 autocomplete="false" [(ngModel)]="usuario.userLogin" #loginValidate="ngModel" required>
         </div>
     </div>
+    
+    <div class="card text-center">
+        <div class="card-header">
+            Telefone Contato
+        </div>
+        <div class="card-body" id="corpoCardTel">
+            <div class="form-row">
+                <div class="form-group col-md-3">
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group col-md-2">
+                    <button class="btn btn-primary">Adicionar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <table class="table" *ngIf="usuario.userTelefones.length > 0">
+        <tbody>
+            <tr *ngFor="let tel of usuario.userTelefones">
+                <td>{{ tel.numero }}</td>
+                <td>
+                    <button type="button" class="btn btn-danger" id="btnExcluirTel">Excluir</button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
     <!--<div class="form-row" *ngIf="op == 'salvar'">
         <div class="form-group col-md-2">
             <label for="inputSenha">Senha</label>
