--- a/src/app/usuario/usuario-add/usuario-add.component.html
+++ b/src/app/usuario/usuario-add/usuario-add.component.html
@@ -35,7 +35,9 @@
         <div class="card-body" id="corpoCardTel">
             <div class="form-row">
                 <div class="form-group col-md-3">
-                    <input type="text" class="form-control">
+                    <form #formValidateTel="ngForm">
+                        <input type="text" class="form-control" name="telefone">
+                    </form>
                 </div>
                 <div class="form-group col-md-2">
                     <button class="btn btn-primary">Adicionar</button>
@@ -44,12 +46,16 @@
         </div>
     </div>
 
-    <table class="table" *ngIf="usuario.userTelefones.length > 0">
+    <table class="table">
         <tbody>
             <tr *ngFor="let tel of usuario.userTelefones">
-                <td>{{ tel.numero }}</td>
-                <td>
-                    <button type="button" class="btn btn-danger" id="btnExcluirTel">Excluir</button>
+                <td *ngIf="tel.id">{{ tel.id }}</td>
+                <td *ngIf="tel.id">{{ tel.numero }}</td>
+                <td *ngIf="tel.id">
+                    <button type="button" class="btn btn-danger" id="btnExcluirTel" 
+                        data-toggle="modal" data-target="#modalExcluir" (click)="atribuiValorIdTelefoneParaExcluir(tel.id)">
+                        Excluir
+                    </button>
                 </td>
             </tr>
         </tbody>
@@ -78,3 +84,7 @@
         </div>
     </div>
   </form>
+
+  <!-- Modal de confirmacao de exclusao de telefone -->
+<app-confirm-excluir [titulo]="titulo" [msg]="msgExcluirTelefone" (excluirSim)="excluirTelefone($event)">
+</app-confirm-excluir>
