--- a/src/app/usuario/usuario-add/usuario-add.component.html
+++ b/src/app/usuario/usuario-add/usuario-add.component.html
@@ -36,11 +36,11 @@
             <div class="form-row">
                 <div class="form-group col-md-3">
                     <form #formValidateTel="ngForm">
-                        <input type="text" class="form-control" name="telefone">
+                        <input type="text" class="form-control" name="telefone" [(ngModel)]="telefone.numero">
                     </form>
                 </div>
                 <div class="form-group col-md-2">
-                    <button class="btn btn-primary">Adicionar</button>
+                    <button class="btn btn-primary" (click)="addTelefone()">Adicionar</button>
                 </div>
             </div>
         </div>
@@ -48,12 +48,11 @@
 
     <table class="table">
         <tbody>
-            <tr *ngFor="let tel of usuario.userTelefones">
-                <td *ngIf="tel.id">{{ tel.id }}</td>
-                <td *ngIf="tel.id">{{ tel.numero }}</td>
-                <td *ngIf="tel.id">
+            <tr *ngFor="let tel of usuario.userTelefones; let i = index">
+                <td *ngIf="tel.numero">{{ tel.numero }}</td>
+                <td *ngIf="tel.numero">
                     <button type="button" class="btn btn-danger" id="btnExcluirTel" 
-                        data-toggle="modal" data-target="#modalExcluir" (click)="atribuiValorIdTelefoneParaExcluir(tel.id)">
+                        data-toggle="modal" data-target="#modalExcluir" (click)="atribuiValoresIdTelefoneComIndiceParaExcluir(tel.id, i)">
                         Excluir
                     </button>
                 </td>
@@ -85,6 +84,6 @@
     </div>
   </form>
 
-  <!-- Modal de confirmacao de exclusao de telefone -->
+<!-- Modal de confirmacao de exclusao de telefone -->
 <app-confirm-excluir [titulo]="titulo" [msg]="msgExcluirTelefone" (excluirSim)="excluirTelefone($event)">
 </app-confirm-excluir>
