--- a/src/app/usuario/usuarios/usuario.component.html
+++ b/src/app/usuario/usuarios/usuario.component.html
@@ -26,7 +26,7 @@
             <td>{{ usuario.userLogin }}</td>
             <td>
                 <button class="btn btn-primary " data-toggle="modal" data-target="#modalExcluir" 
-                    (click)="idUsuario = usuario.id">Excluir</button>
+                    (click)="recebeDadosUsuarioParaExcluir(usuario.id, usuario.userNome)">Excluir</button>
                 <button routerLink="../usuario/add/{{usuario.id}}" class="btn btn-warning" id="btnEditar">
                     Editar
                 </button>
@@ -35,27 +35,9 @@
     </tbody>
 </table>
 
-<!-- Modal de confirmacao para excluir -->
-<div class="modal fade" id="modalExcluir" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" 
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Excluir</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-            Tem certeza de que deseja excluir?
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Não</button>
-          <button type="button" class="btn btn-primary" (click)="excluir()" data-dismiss="modal">Sim</button>
-        </div>
-      </div>
-    </div>
-  </div>
+<!-- Modal de confirmacao de exclusao de telefone -->
+<app-confirm-excluir [titulo]="titulo" [msg]="msgExcluirUsuario" (excluirSim)="excluirUsuario($event)">
+</app-confirm-excluir>
 
 
 
